# investigator_software

./: .gitignore  README.md
hardware_interface/: CMakeLists.txt  package.xml
hardware_interface/launch/: hardware_interface.launch
hardware_interface/msg/: CommReadData.msg  CommSingleWrite.msg  EncoderSpeed.msg  MotorPWM.msg
hardware_interface/src/: comms.py  imu_interface.py  msp430_interface.py  spi_registers.py
hardware_interface/srv/: CommRepetitiveRead.srv  CommSingleRead.srv  CommSrv.srv
kipc_launch/: CMakeLists.txt  package.xml
kipc_launch/launch/: kipc_launch.launch
motion_control/: CMakeLists.txt  package.xml
motion_control/launch/: motion_control.launch
motion_control/msg/: MotorAngularWheelVelocities.msg
motion_control/scripts/: forward_one_meter.py  rotate_180.py
motion_control/src/: inverse_kinematics.py  waypoint.py  wheel_speed_controller.py
motion_control/srv/: WaypointCmd.srv
percept_generators/: CMakeLists.txt  package.xml
percept_generators/launch/: percept_generators.launch
percept_generators/src/: forward_kinematics.py  kinect_generator.cpp  state_estimator.py
user_interface/: CMakeLists.txt  package.xml
user_interface/src/: leap_interface.py
