<?xml version="1.0"?>
<package>
  <name>hardware_interface</name>
  <version>0.0.0</version>
  <description>The hardware_interface package</description>

  <maintainer email="fnivek@gmail.com">fnivek</maintainer>

  <license>MIT</license>

  <url type="website">https://github.com/fnivek/investigator_software</url>

  <author email="fnivek@gmail.com">Kevin French</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>

  <run_depend>message_runtime</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>

</package>